Followup to 2497. Addressing comments from PR 2497 (#2628)
* Followup to 2497. Addressing comments from PR 2497

Signed-off-by: Krishna Kondaka <krishkdk@amazon.com>

* Fixed check style failures

Signed-off-by: Krishna Kondaka <krishkdk@amazon.com>

---------

Signed-off-by: Krishna Kondaka <krishkdk@amazon.com>